<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CampusdishclientActivity!</string>
    <string name="app_name">E-动点餐系统</string>
    <string name="login">登录</string>
    <string name="Dish_detail">详细信息</string>
    <string name="DishDetail_addToCart">加入菜单</string>
    <string name="Main_showCart">菜单</string>
    <string name="ShowCart">菜单信息</string>
    <string name="main_listImage_content">图片</string>
    <string name="DishDetail_button">加入菜单</string>
    <string name="DishDetail_ImageDescription">图片</string>
    <string name="MainList_Text_Info">详细信息：</string>
    <string name="ShowCart_Text_CartInfo">菜单信息</string>
    <string name="Login_text_number">学号：</string>
    <string name="ShowCart_text_price">价格：</string>
    <string name="ShowCart_text_comment">备注：</string>
    <string name="ShowCart_button_submit">提交</string>
    <string name="main_radio_lunch">中餐</string>
    <string name="main_radio_breakfast">早餐</string>
    <string name="main_radio_supper">晚餐</string>
    <string name="ShowCart_Logo_text">菜品信息</string>
    <string name="DishDetail_Logo_text">详细信息</string>
    <string name="DishDetail_text_dishComment_info">相关评论：</string>
    <string name="LogIn_Logo_text">登录</string>
    <string name="Main_setServerIp">服务器IP</string>

</resources>