<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#75000000"
            android:shadowDy="2.0"
            android:shadowRadius="2.0"
            android:text="@string/ShowCart_Text_CartInfo"
            android:textColor="#ffffffff"
            android:textSize="20.0sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:padding="4sp" > 

        <Button 
            android:layout_alignParentRight="true"
            android:id="@+id/showcart_button_submit"
            android:text="@string/ShowCart_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShowCart_text_price"
            android:textSize="20dip" 
            android:layout_alignParentLeft="true"
            android:id="@+id/showcart_text_priceword"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/showcart_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffFF3030"
            android:textSize="28dip" 
            android:layout_toRightOf="@id/showcart_text_priceword"
            android:layout_alignParentBottom="true"/>
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dip"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/list_shape_bg"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/showcart_mainList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:listSelector="@drawable/selector_list"
            android:scrollingCache="false" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShowCart_text_comment"
            android:textSize="20dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:background="@drawable/list_shape_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/showcart_text_comment"
                android:layout_width="match_parent"
                android:layout_height="100dip"
                android:textColor="#ff575757"
                android:textSize="15dip" 
                android:scrollbars="vertical"
                android:text="无"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>